Fix content alignment in table

--- a/static/sass/_pattern_cube-table.scss
+++ b/static/sass/_pattern_cube-table.scss
@@ -7,6 +7,10 @@
 
     &:nth-child(2) {
       width: 5%;
+      img {
+        height: 3rem;
+        margin-top: 0.25rem;
+      }
     }
 
     &:nth-child(3) {
@@ -19,21 +23,34 @@
 
     &:nth-child(5) {
       width: 13%;
-    }
 
-    &:nth-child(6) {
-      width: 18%;
-    }
-  }
-
-  @media only screen and (max-width: $breakpoint-medium) {
-    td {
-      &:nth-child(5) {
+      @media only screen and (max-width: $breakpoint-medium) {
         i,
         small {
           display: none !important;
         }
       }
     }
+
+    &:nth-child(6) {
+      width: 18%;
+    }
+  }
+}
+
+.table-contents {
+  padding-top: 1rem;
+
+  > * {
+    margin: 0;
+    padding: 0;
+  }
+
+  li:first-of-type {
+    margin-top: 0;
+    padding-top: 0;
+  }
+  li:last-of-type {
+    padding-bottom: 1rem;
   }
 }
